--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "gulp-uglify": "^1.5.3",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.2.2",
-    "karma-firefox-launcher": "*",
-    "karma-html2js-preprocessor": "*",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-html2js-preprocessor": "^0.1.0",
     "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-safari-launcher": "^0.1.1",
