--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
     "mocha": "*",
     "optimist": "*",
     "phantomjs-prebuilt": "^2.1.7",
-    "sinon": "^1.17.3"
+    "sinon": "^1.17.3",
+    "karma": "~0.12"
+  },
+  "scripts": {
+   "test": "./node_modules/karma/bin/karma start --single-run --browsers PhantomJS"
   }
+
 }
