--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "karma-html2js-preprocessor": "^0.1.0",
     "karma-mocha": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.0",
-    "karma-safari-launcher": "^0.1.1",
+    "karma-safari-launcher": "~0.1",
     "karma-sinon": "^1.0.4",
     "minimax": "*",
     "mocha": "*",
